[tool.poetry]
name = "python-helpers"
version = "0.1.0"
description = "Miscellaneous helper functions I want to keep under version control."
authors = ["Eric Fulmer <eric.r.fulmer@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.1"
black = "^19.10b0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
